[package]
name = "torii"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.9"
dotenvy = "0.15.7"
hyper = "1.10.0"
jsonwebtoken = "10.4.0"
moka = { version = "0.12.15", features = ["future"] }
reqwest = { version = "0.13.4", features = ["form", "json"] }
serde = "1.0.228"
serde_json = "1.0.150"
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["full"] }
tower = "0.5.3"
tower-http = "0.6.11"
url = "2.5.8"
uuid = { version = "1.23.1", features = ["v4"] }
