[package]
name = "torii"
version = "0.1.0"
edition = "2024"

[dependencies]
arc-swap = "1.9.1"
axum = "0.8.9"
clap = { version = "4.6.1", features = ["derive"] }
dotenvy = "0.15.7"
hyper = "1.10.0"
hyper-rustls = "0.27.9"
hyper-util = "0.1.20"
jsonwebtoken = { version = "10.4.0", features = ["aws_lc_rs"] }
matchit = "0.9.2"
moka = { version = "0.12.15", features = ["future"] }
postcard = { version = "1.1.3", features = ["alloc"] }
reqwest = { version = "0.13.4", features = ["form", "json"] }
rustls = "0.23.40"
serde = "1.0.228"
serde_json = "1.0.150"
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["full"] }
toml = "1.1.2"
tower = "0.5.3"
tower-http = "0.6.11"
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
url = "2.5.8"
uuid = { version = "1.23.1", features = ["v4"] }

[profile.release]
lto = true
codegen-units = 1
strip = true
panic = "abort"
