[package]
name = "kekkai"
version = "0.1.0"
edition = { workspace = true }

[dependencies]
keidai = { workspace = true }

aya-ebpf = { workspace = true }
aya-log-ebpf = { workspace = true }
network-types = "0.2.0"

[build-dependencies]
which = { workspace = true }

[[bin]]
name = "kekkai"
path = "src/main.rs"

# build: cargo +nightly build -p kekkai -Z build-std=core --target bpfel-unknown-none --release
